# ablate

./: .CMakeLists.txt.swp  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake.in  DockerDependencyFile  DockerDocsFile  DockerTestFile  DockerVersionFile  LICENSE  MMA-105-870-noP-cleaner.inp  MMA.inp  MMA.yaml  MMAReduced.soot.inp  MMAReduced.soot.yml  README.md  clangFormatter.cmake  doxyfile.config  ex37.c  ex44.c  example test  extrudeExample.c  grimech.inp  includePETScCompiler.cmake  input0D.yaml  input0Dsoot.yaml  input0Dtchem2.yaml  input1D.yaml  input1Dsoot.yaml  input2D.yaml  main.c  main.cpp  mech.cklog  mech2.cklog  mesh2D.msh  quartz2908-ablate-1438459.core  quartz2908-ablate-1442195.core  quartz2956-ablate-956502.core  (+13 more)
ablateCore/: CMakeLists.txt
ablateCore/eos/: CMakeLists.txt  eos.c  eos.h  perfectGas.c  perfectGas.h
ablateCore/flow/: CMakeLists.txt  compressibleFlow.c  compressibleFlow.h  flow.c  flow.h  fluxDifferencer.c  fluxDifferencer.h  fvSupport.c  fvSupport.h  incompressibleFlow.c  incompressibleFlow.h  lowMachFlow.c  lowMachFlow.h
ablateCore/particles/: CMakeLists.txt  particleInertial.c  particleInertial.h  particleTracer.c  particleTracer.h  particles.c  particles.h
ablateLibrary/: CMakeLists.txt  builder.cpp  builder.hpp  domain.cpp  domain.h  radiation.cpp  timeStepper.cpp  timeStepper.hpp
ablateLibrary/boundarySolver/: CMakeLists.txt  boundaryProcess.hpp  boundarySolver.cpp  boundarySolver.hpp
ablateLibrary/chemistry/: chemTabModel.cpp  chemTabModel.hpp  chemistryModel.hpp
ablateLibrary/domain/: CMakeLists.txt  boxMesh.cpp  boxMesh.hpp  boxMeshBoundaryCells.cpp  boxMeshBoundaryCells.hpp  dmPlex.cpp  dmPlex.hpp  dmWrapper.cpp  dmWrapper.hpp  domain.cpp  domain.hpp  field.cpp  field.hpp  fieldDescription.cpp  fieldDescription.hpp  fieldDescriptor.cpp  fieldDescriptor.hpp  fileMesh.cpp  fileMesh.hpp  region.cpp  region.hpp  subDomain.cpp  subDomain.hpp
ablateLibrary/environment/: CMakeLists.txt  restartManager.hpp  restartable.hpp  restoreState.hpp  runEnvironment.cpp  runEnvironment.hpp  saveState.hpp  saveStateDeterminer.hpp  yamlRestartManager.cpp  yamlRestartManager.hpp
ablateLibrary/eos/: CMakeLists.txt  eos.cpp  eos.hpp  perfectGas.cpp  perfectGas.hpp  stiffenedGas.cpp  stiffenedGas.hpp  tChem.cpp  tChem.hpp
ablateLibrary/finiteElement/: CMakeLists.txt  finiteElement.cpp  finiteElement.hpp  finiteElementSolver.cpp  finiteElementSolver.hpp  incompressibleFlow.cpp  incompressibleFlow.hpp  incompressibleFlowSolver.cpp  incompressibleFlowSolver.hpp  lowMachFlow.cpp  lowMachFlow.hpp  lowMachFlowFields.cpp  lowMachFlowFields.hpp  lowMachFlowSolver.cpp  lowMachFlowSolver.hpp
ablateLibrary/finiteVolume/: CMakeLists.txt  compressibleFlow.cpp  compressibleFlow.hpp  compressibleFlowFields.cpp  compressibleFlowFields.hpp  compressibleFlowSolver.cpp  compressibleFlowSolver.hpp  finiteVolume.cpp  finiteVolume.hpp  finiteVolumeSolver.cpp  finiteVolumeSolver.hpp  flow.cpp  flow.hpp  fvFlow.cpp  fvFlow.hpp  reactingCompressibleFlow.cpp  reactingCompressibleFlow.hpp  reactingCompressibleFlowSolver.cpp  reactingCompressibleFlowSolver.hpp
ablateLibrary/flow/: CMakeLists.txt  boundaryCondition.cpp  boundaryCondition.hpp  compressibleFlow.cpp  compressibleFlow.hpp  fieldDescriptor.hpp  flow.cpp  flow.hpp  flowFieldDescriptor.cpp  flowFieldDescriptor.hpp  flowFieldSolution.cpp  flowFieldSolution.hpp  fvFlow.cpp  fvFlow.hpp  incompressibleFlow.cpp  incompressibleFlow.hpp  lowMachFlow.cpp  lowMachFlow.hpp  reactingCompressibleFlow.cpp  reactingCompressibleFlow.hpp  reactingGlobCompressibleFlow.cpp  reactingGlobCompressibleFlow.hpp
ablateLibrary/io/: CMakeLists.txt  hdf5MultiFileSerializer.cpp  hdf5MultiFileSerializer.hpp  hdf5Serializer.cpp  hdf5Serializer.hpp  serializable.hpp  serializer.hpp
ablateLibrary/mathFunctions/: CMakeLists.txt  constantValue.cpp  constantValue.hpp  fieldFunction.cpp  fieldFunction.hpp  fieldSolution.cpp  fieldSolution.hpp  formula.cpp  formula.hpp  functionFactory.hpp  functionPointer.cpp  functionWrapper.cpp  functionWrapper.hpp  linearInterpolator.cpp  linearInterpolator.hpp  linearTable.cpp  mathFunction.hpp  parsedFunction.cpp  parsedFunction.hpp  parsedNested.cpp  parsedNested.hpp  parsedSeries.cpp  simpleFormula.hpp
ablateLibrary/mesh/: CMakeLists.txt  boxMesh.cpp  boxMesh.hpp  dmPlex.cpp  dmPlex.hpp  dmWrapper.cpp  dmWrapper.hpp  fileMesh.cpp  fileMesh.hpp  mesh.cpp  mesh.hpp
ablateLibrary/monitors/: CMakeLists.txt  convergenceCheck.hpp  curveMonitor.cpp  curveMonitor.hpp  dmViewFromOptions.cpp  dmViewFromOptions.hpp  errorMonitor.cpp  errorMonitor.hpp  extractLineMonitor.cpp  fieldErrorMonitor.cpp  fieldErrorMonitor.hpp  hdf5Monitor.cpp  hdf5Monitor.hpp  hdf5Output.cpp  hdf5Output.hpp  ignitionDelayPeakYi.cpp  ignitionDelayPeakYi.hpp  ignitionDelayTemperature.cpp  ignitionDelayTemperature.hpp  maxMinAverage.cpp  maxMinAverage.hpp  monitor.hpp  monitorable.hpp  particleAverage.cpp  particleAverage.hpp  particleCount.cpp  particleCount.hpp  physicsTimeStep.hpp  probes.cpp  probes.hpp  restart.cpp  restart.hpp  runEnvironment.cpp  runEnvironment.hpp  solutionErrorMonitor.cpp  solutionErrorMonitor.hpp  timeStepMonitor.cpp  timeStepMonitor.hpp  viewable.hpp
ablateLibrary/parameters/: CMakeLists.txt  Parameters.hpp  factoryParameters.cpp  factoryParameters.hpp  mapParameters.cpp  mapParameters.hpp  parameterException.hpp  parameters.cpp  parameters.hpp  petscOptionParameters.cpp  petscOptionParameters.hpp  petscPrefixOptions.cpp  petscPrefixOptions.hpp
src/: CMakeLists.txt  builder.cpp  builder.hpp  constants.c  constants.h  demo.c  demo.h  ex11.c  example76.c  lowMachFlow.c  lowMachFlow.h  mesh.c  mesh.h  parameters.c  parameters.h  version.h.in
tests/: CMakeLists.txt  MpiTestFixture.cpp  MpiTestFixture.h  MpiTestParamFixture.h  constantsTests.cpp  demoTestA.cpp  demoTestB.cpp  demoTesta.cpp  demoTestb.cpp  flowTests.cpp  incompressibleFlowTests.cpp  lowMachFlowTests.cpp  lowMachFlowTests2.cpp  lowMachNumberTests.cpp  main.cpp  parametersTests.cpp  particleTests.cpp
(+2018 files in other folders)
