target_sources(ablateLibrary
        PUBLIC
        domain.hpp
        domain.cpp
        subDomain.hpp
        subDomain.cpp
        field.hpp
        field.cpp
        fieldDescription.hpp
        fieldDescription.cpp
        boxMesh.hpp
        boxMesh.cpp
        dmWrapper.hpp
        dmWrapper.cpp
        dmPlex.hpp
        dmPlex.cpp
        fileMesh.hpp
        fileMesh.cpp
        region.hpp
        region.cpp
        fieldDescription.hpp
        fieldDescription.cpp
        fieldDescriptor.hpp
        )

add_subdirectory(modifiers)
