target_sources(ablateLibrary
        PUBLIC
        parsedFunction.cpp
        parsedFunction.hpp
        functionWrapper.cpp
        functionWrapper.hpp
        functionPointer.hpp
        functionPointer.cpp
        mathFunction.hpp
        functionFactory.hpp
        fieldFunction.cpp
        fieldFunction.hpp
        constantValue.hpp
        constantValue.cpp
        parsedSeries.hpp
        parsedSeries.cpp
        linearTable.hpp
        linearTable.cpp
        parsedNested.hpp
        parsedNested.cpp
        )

add_subdirectory(geom)