target_sources(ablateLibrary
        PUBLIC
        simpleFormula.cpp
        simpleFormula.hpp
        functionWrapper.cpp
        functionWrapper.hpp
        functionPointer.hpp
        functionPointer.cpp
        mathFunction.hpp
        functionFactory.hpp
        fieldFunction.cpp
        fieldFunction.hpp
        constantValue.hpp
        constantValue.cpp
        parsedSeries.hpp
        parsedSeries.cpp
        linearTable.hpp
        linearTable.cpp
        formula.hpp
        formula.cpp
        )

add_subdirectory(geom)