target_sources(ablateLibrary
        PUBLIC
        monitor.hpp
        fieldErrorMonitor.hpp
        fieldErrorMonitor.cpp
        solutionErrorMonitor.hpp
        solutionErrorMonitor.cpp
        timeStepMonitor.hpp
        timeStepMonitor.cpp
        ignitionDelayPeakYi.hpp
        ignitionDelayPeakYi.cpp
        ignitionDelayTemperature.hpp
        ignitionDelayTemperature.cpp
        curveMonitor.hpp
        curveMonitor.cpp
        dmViewFromOptions.hpp
        dmViewFromOptions.cpp
        particleCount.hpp
        particleCount.cpp
        particleAverage.hpp
        particleAverage.cpp
        )

add_subdirectory(logs)