target_sources(ablateLibrary
        PUBLIC
        monitor.hpp
        fieldErrorMonitor.hpp
        fieldErrorMonitor.cpp
        solutionErrorMonitor.hpp
        solutionErrorMonitor.cpp
        timeStepMonitor.hpp
        timeStepMonitor.cpp
        ignitionDelayPeakYi.hpp
        ignitionDelayPeakYi.cpp
        ignitionDelayTemperature.hpp
        ignitionDelayTemperature.cpp
        extractLineMonitor.hpp
        extractLineMonitor.cpp
        dmViewFromOptions.hpp
        dmViewFromOptions.cpp
        particleCount.hpp
        particleCount.cpp
        particleAverage.hpp
        particleAverage.cpp
        curveMonitor.hpp
        curveMonitor.cpp
        )

add_subdirectory(logs)