target_sources(ablateLibrary
        PRIVATE
        domain.cpp
        subDomain.cpp
        field.cpp
        fieldDescription.cpp
        boxMesh.cpp
        dmWrapper.cpp
        dmPlex.cpp
        fileMesh.cpp
        region.cpp
        fieldDescription.cpp
        boxMeshBoundaryCells.cpp
        PUBLIC
        domain.hpp
        subDomain.hpp
        field.hpp
        fieldDescription.hpp
        boxMesh.hpp
        dmWrapper.hpp
        dmPlex.hpp
        fileMesh.hpp
        region.hpp
        fieldDescription.hpp
        fieldDescriptor.hpp
        boxMeshBoundaryCells.hpp
        )

add_subdirectory(modifiers)
